feat: add the rules layer-styles-no-dirty and text-styles-no-dirty

--- a/src/locale/en/messages.po
+++ b/src/locale/en/messages.po
@@ -13,11 +13,11 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/index.ts:46
+#: src/index.ts:48
 msgid "Sketch Assistant Core Rules"
 msgstr "Sketch Assistant Core Rules"
 
-#: src/index.ts:47
+#: src/index.ts:49
 msgid "Official Sketch Assistant containing the core rule set"
 msgstr "Official Sketch Assistant containing the core rule set"
 
@@ -386,6 +386,22 @@ msgstr "Define a list of disallowed layer names"
 msgid "An array of disallowed layer name pattern strings as JavaScript compatible regex"
 msgstr "An array of disallowed layer name pattern strings as JavaScript compatible regex"
 
+#: src/rules/layer-styles-no-dirty/index.ts:56
+msgid "Style differs from the shared layer style"
+msgstr "Style differs from the shared layer style"
+
+#: src/rules/layer-styles-no-dirty/index.ts:61
+msgid "Unknown layer shared style"
+msgstr "Unknown layer shared style"
+
+#: src/rules/layer-styles-no-dirty/index.ts:71
+msgid "No dirty"
+msgstr "No dirty"
+
+#: src/rules/layer-styles-no-dirty/index.ts:72
+msgid "Disallow layers with styles that differ from their shared styles"
+msgstr "Disallow layers with styles that differ from their shared styles"
+
 #: src/rules/layer-styles-prefer-shared/index.ts:73
 msgid "{maxIdentical, plural, one {Expected no identical layer styles in the document, but found {numIdentical} matching this layer's style. Consider a shared style instead} other {Expected a maximum of # identical layer styles in the document, but found {numIdentical} instances of this layer's style. Consider a shared style instead}}"
 msgstr "{maxIdentical, plural, one {Expected no identical layer styles in the document, but found {numIdentical} matching this layer's style. Consider a shared style instead} other {Expected a maximum of # identical layer styles in the document, but found {numIdentical} instances of this layer's style. Consider a shared style instead}}"
@@ -482,6 +498,22 @@ msgstr "No Unused Symbols"
 #: src/rules/symbols-no-unused/index.ts:39
 msgid "Disallow symbols that have no corresponding usage anywhere in the document"
 msgstr "Disallow symbols that have no corresponding usage anywhere in the document"
+
+#: src/rules/text-styles-no-dirty/index.ts:51
+msgid "Style differs from the shared text style"
+msgstr "Style differs from the shared text style"
+
+#: src/rules/text-styles-no-dirty/index.ts:56
+msgid "Unknown shared style"
+msgstr "Unknown shared style"
+
+#: src/rules/text-styles-no-dirty/index.ts:66
+msgid "Prefer text styles to be in sync with their shared style"
+msgstr "Prefer text styles to be in sync with their shared style"
+
+#: src/rules/text-styles-no-dirty/index.ts:67
+msgid "Disallow text styles that differ from their shared styles"
+msgstr "Disallow text styles that differ from their shared styles"
 
 #: src/rules/text-styles-prefer-shared/index.ts:68
 msgid "{maxIdentical, plural, one {Expected no identical text styles in the document, but found {numIdentical} matching this layer's text style. Consider a shared text style instead} other {Expected a maximum of # identical text styles in the document, but found {numIdentical} instances of this layer's text style. Consider a shared text style instead}}"
